added few things